--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
   </head>
-  <body class="bg-[rgba(2,3,23,1)] text-white">
-    <nav class="mx-auto flex justify-between items-center py-4 px-8 w-[70%] border-2 border-solid rounded-2xl border-[rgba(255,255,255,0.1)] mt-10"> 
-      <div class="w-[6%] border-2 border-solid border-[rgba(255,255,255,0.60)] rounded-md py-3 px-1 hover:cursor-pointer"><img src="assets/Plain-M.png" class="w-full"></div>
+  <body class="bg-[rgba(2,3,23,1)] text-white overflow-x-hidden">
+    <nav class="mx-auto flex justify-between items-center py-4 px-8 w-[70%] border-[0.5px] border-solid rounded-2xl border-[rgba(255,255,255,0.1)] bg-black/5 backdrop-blur-lg fixed top-12 left-0 right-0 z-50"> 
+      <div class="w-[6%] border-[1px] border-solid border-[rgba(255,255,255,0.60)] rounded-md py-3 px-1 hover:cursor-pointer hover:border-red-400"><img src="assets/Plain-M.png" class="w-full"></div>
       <ul class="flex justify-between w-[20%] ml-[32vw]">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="text-sm"><a href="#">About</a></li>
+        <li class="text-sm"><a href="#">Work</a></li>
+        <li class="text-sm"><a href="#">Contact</a></li>
       </ul>
       <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-5 overflow-hidden cursor-pointer hover:border-red-400/75">
         <i class="fa-solid fa-file mr-2.5" style="color: #ff3d3d;"></i>
-        <h3>Resume</h3>
+        <h3 class="text-sm text-red-500">Resume</h3>
         <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
       </button>
 
       <button class="bg-[#efefef] h-7 w-[6%] rounded-2xl cursor-pointer transition duration-500 ease-in-out light-control"><span class="block bg-[#999] w-[31%] h-5 rounded-full ml-1 transition duration-500 ease-in-out btn-ball"></span></button>
     </nav>
 
-    <header>
+    <header class="mt-[17vh]">
       <div class="container">
         <div class="intro">
           <div class="lamp-container">
@@ -37,9 +37,9 @@
       </div>
     </header>
 
-    <main class="mt-[50vh] mb-[50vh]">
+    <main class="mt-[50vh]">
       <div class="container">
-        <div class="aboutme-page">
+        <div class="aboutme-page box mb-[30vh]">
           <div class="aboutme-flex flex">
             <div class="about-left w-[30%] ml-[15vw] mt-[15vh]">
               <h2 class="w-6 text-6xl font-black opacity-90 text-stroke-white mb-8">About Me.</h2>
@@ -48,11 +48,11 @@
 
               <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-5 overflow-hidden cursor-pointer hover:border-red-400/75">
                 <i class="fa-solid fa-file mr-2.5" style="color: #ff3d3d;"></i>
-                <h3>Resume</h3>
+                <p class="text-sm text-red-500">View Resume</p>
                 <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
               </button>
             </div>
-            <div class="about-right w-[40%] border-2 border-solid border-b-0 border-[rgba(255,255,255,0.1)] rounded-2xl p-8 ml-1">
+            <div class="about-right w-[40%] border-[1px] border-solid border-b-0 border-[rgba(255,255,255,0.1)] border-l-red-500 border-t-red-300 border-r-red-300 rounded-2xl p-8 ml-1">
               <p class="text-gray-400 text-base/7">Hi, I'm Emmanuel, a frontend engineer with a passion for crafting beautiful and user-friendly interfaces. My journey began in 2018 as a graphic designer, where I developed an eye for detail and a drive to create aesthetically pleasing designs. As I delved deeper into the world of design, I became fascinated with the idea of bringing my creations to life on the web and mobile devices.
 
                 This curiosity led me to transition into Frontend engineering, where I could combine my design skills with my newfound love for coding. Since then, I've had the privilege of working on numerous exciting projects, each one presenting a new challenge and opportunity to grow.
@@ -64,10 +64,15 @@
             </div>
           </div>
         </div>
+
+          <div class="recent-work box mt-[50vh]">
+            <h1 class="font-black text-6xl text-amber-900"><span>My Recent</span> Works</h1>
+
+          </div>
       </div>
     </main>
 
     <script src="https://kit.fontawesome.com/ad2f1382aa.js" crossorigin="anonymous"></script>
-    <script src="portfolio.js"></script>
+    <script defer src="portfolio.js"></script>
   </body>
   </html>
