--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,12 @@
           </div>
         </div>
 
-          <div class="recent-work box mt-[50vh]">
-            <h1 class="font-black text-6xl text-amber-900"><span>My Recent</span> Works</h1>
+          <div class="recent-work box mt-[50vh] mb-[80vh]">
+            <h1 class="font-black text-6xl text-white ml-[8vw]"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
+            <div class="work-one mt-[15vh] ml-[12vw] flex justify-between">
+              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10"><img src="assets/Portfolio1-img.png" class="w-full"></div>
+            </div>
           </div>
       </div>
     </main>
