--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,23 @@
           <div class="recent-work box mt-[50vh] mb-[80vh]">
             <h1 class="font-black text-6xl text-white ml-[8vw]"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
-            <div class="work-one mt-[15vh] ml-[12vw] flex justify-between">
-              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10"><img src="assets/Portfolio1-img.png" class="w-full"></div>
+            <div class="work-one mt-[15vh] ml-[12vw] flex">
+              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+
+              <div class="work-one_writeup w-[35%] ml-[5vw]">
+                <h1 class="text-end mt-[10vh] text-lg">Marius Odediran V1</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <div class="work-one_btns flex">
+                  <button class="mt-5 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">HTML</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="mt-5 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">CSS</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
       </div>
