--- a/src/index.html
+++ b/src/index.html
@@ -72,18 +72,24 @@
               <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
 
               <div class="work-one_writeup w-[35%] ml-[5vw]">
-                <h1 class="text-end mt-[10vh] text-lg">Marius Odediran V1</h1>
+                <h1 class="text-end mt-[6vh] text-lg">Marius Odediran V1</h1>
                 <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
-                <div class="work-one_btns flex">
-                  <button class="mt-5 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                <div class="work-one_btns flex justify-end mt-5">
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
                     <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
                   </button>
-                  <button class="mt-5 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">CSS</p>
                     <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
                   </button>
+                  <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">JavaScript</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
                 </div>
+
+                <div class="w-fit mt-6 ml-[28vw]"><a href="https://mariusodediran.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
             </div>
           </div>
