Added new codes

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
   </head>
-  <body class="bg-[rgba(2,3,23,1)] text-white overflow-x-hidden">
+  <body class="bg-[rgba(2,3,23,1)] text-white overflow-x-hidden scroll-smooth">
     <nav class="mx-auto flex justify-between items-center py-4 px-8 w-[70%] border-[0.5px] border-solid rounded-2xl border-[rgba(255,255,255,0.1)] bg-black/5 backdrop-blur-lg fixed top-12 left-0 right-0 z-50"> 
       <div class="w-[6%] border-[1px] border-solid border-[rgba(255,255,255,0.60)] rounded-md py-3 px-1 hover:cursor-pointer hover:border-red-400"><img src="assets/Plain-M.png" class="w-full"></div>
       <ul class="flex justify-between w-[20%] ml-[32vw]">
@@ -92,6 +92,58 @@
                 <div class="w-fit mt-6 ml-[28vw]"><a href="https://mariusodediran.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
             </div>
+
+            <div class="work-two mt-[30vh] ml-[12vw] flex">
+              
+              <div class="work-two_writeup w-[35%] ml-[0vw]">
+                <h1 class="mt-[6vh] text-lg">Marius Odediran V1</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <div class="work-one_btns flex justify-start mt-5">
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">HTML</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">CSS</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">JavaScript</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                </div>
+
+                <div class="w-fit mt-6"><a href="https://earnest-kataifi-e1407d.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
+              </div>
+
+              <div class="work-img w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Bookmark-page.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+            </div>
+
+            <div class="work-three mt-[30vh] ml-[12vw] flex">
+              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Eazybanks.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+
+              <div class="work-three_writeup w-[35%] ml-[5vw]">
+                <h1 class="text-end mt-[6vh] text-lg">Marius Odediran V1</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <div class="work-one_btns flex justify-end mt-5">
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">HTML</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">CSS</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">JavaScript</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                </div>
+
+                <div class="w-fit mt-6 ml-[28vw]"><a href="https://taupe-pithivier-e7e77b.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
+              </div>
+            </div>
+
           </div>
       </div>
     </main>
