--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
 
               <div class="work-one_writeup w-[35%] ml-[5vw]">
                 <h1 class="text-end mt-[6vh] text-lg">Marius Odediran V1</h1>
-                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <p class="bg-rose-500 px-6 py-4 mt-7">This is my Personal Portfolio Website(V1)🚀. Get to know a bit about me</p>
                 <div class="work-one_btns flex justify-end mt-5">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
@@ -142,6 +142,32 @@
 
                 <div class="w-fit mt-6 ml-[28vw]"><a href="https://taupe-pithivier-e7e77b.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
+            </div>
+
+            <div class="work-four mt-[30vh] ml-[12vw] flex">
+              
+              <div class="work-two_writeup w-[35%] ml-[0vw]">
+                <h1 class="mt-[6vh] text-lg">Marius Odediran V1</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <div class="work-one_btns flex justify-start mt-5">
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">HTML</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">CSS</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                  <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
+                    <p class="text-[0.7rem]">JavaScript</p>
+                    <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
+                  </button>
+                </div>
+
+                <div class="w-fit mt-6"><a href="https://mariusweatherappv1.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
+              </div>
+
+              <div class="work-img w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Simple weather app.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
             </div>
 
           </div>
