Added new codes

--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,8 @@
             <div class="work-two mt-[30vh] ml-[12vw] flex">
               
               <div class="work-two_writeup w-[35%] ml-[0vw]">
-                <h1 class="mt-[6vh] text-lg">Marius Odediran V1</h1>
-                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <h1 class="mt-[6vh] text-lg">Bookmark</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <div class="work-one_btns flex justify-start mt-5">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
@@ -123,8 +123,8 @@
               <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Eazybanks.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
 
               <div class="work-three_writeup w-[35%] ml-[5vw]">
-                <h1 class="text-end mt-[6vh] text-lg">Marius Odediran V1</h1>
-                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <h1 class="text-end mt-[6vh] text-lg">Eazybanks</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
                 <div class="work-one_btns flex justify-end mt-5">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
@@ -147,8 +147,8 @@
             <div class="work-four mt-[30vh] ml-[12vw] flex">
               
               <div class="work-two_writeup w-[35%] ml-[0vw]">
-                <h1 class="mt-[6vh] text-lg">Marius Odediran V1</h1>
-                <p class="bg-rose-500 px-6 py-4 mt-7">A fully featured web application admin dashboard for managing Zakat transactions and beneficiaries</p>
+                <h1 class="mt-[6vh] text-lg">Weather App</h1>
+                <p class="bg-rose-500 px-6 py-4 mt-7">A basic weather app that tells the weather forecast of the loaction inputted.</p>
                 <div class="work-one_btns flex justify-start mt-5">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
