Added new codes

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-          <div class="recent-work box mt-[50vh] mb-[80vh]">
+          <div class="recent-work box mt-[50vh]">
             <h1 class="font-black text-6xl text-white ml-[8vw]"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
             <div class="work-one mt-[15vh] ml-[12vw] flex">
@@ -171,6 +171,48 @@
             </div>
 
           </div>
+
+          <section class="myskill-sec box mt-[50vh]">
+            <div class="container">
+              <div class="my-skills">
+                <h1 class="font-black text-6xl text-white ml-[8vw]">My <span class="font-black text-stroke-white">Skills</span></h1>
+                <div class="myskill-grid grid grid-cols-2 gap-4 mt-[10vh]">
+                  
+                  <div class="skill-1">
+                    <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">HTML/CSS</h5>
+                    <div class="progress-bar">
+                      <div class="inner-bars"><p class="text-center">90%</p></div>
+                    </div>
+                  </div>
+        
+                  <div class="skill-2">
+                    <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">JavaScript</h5>
+                    <div class="progress-bar">
+                      <div class="inner-bar2"><p>16%</p></div>
+                    </div>
+                  </div>
+                  <div class="skill-3">
+                    <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">UI/UX Design</h5>
+                    <div class="progress-bar">
+                      <div class="inner-bar3"><p>60%</p></div>
+                    </div>
+                  </div>
+                  <div class="skill-4">
+                    <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">Git/GitHub</h5>
+                    <div class="progress-bar">
+                      <div class="inner-bar4"><p>70%</p></div>
+                    </div>
+                  </div>
+                  <div class="skill-5">
+                    <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">AWS</h5>
+                    <div class="progress-bar">
+                      <div class="inner-bar5"><p>10%</p></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
       </div>
     </main>
 
