Added new codes

--- a/src/index.html
+++ b/src/index.html
@@ -181,32 +181,32 @@
                   <div class="skill-1">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">HTML/CSS</h5>
                     <div class="progress-bar">
-                      <div class="inner-bars"><p class="text-center">90%</p></div>
+                      <div class="inner-bar1 inner-bars"><p class="text-center text-white z-10 font-black">90%</p></div>
                     </div>
                   </div>
         
                   <div class="skill-2">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">JavaScript</h5>
                     <div class="progress-bar">
-                      <div class="inner-bar2"><p>16%</p></div>
+                      <div class="inner-bar2"><p class="text-center text-white">16%</p></div>
                     </div>
                   </div>
                   <div class="skill-3">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">UI/UX Design</h5>
                     <div class="progress-bar">
-                      <div class="inner-bar3"><p>60%</p></div>
+                      <div class="inner-bar3"><p class="text-center text-white">60%</p></div>
                     </div>
                   </div>
                   <div class="skill-4">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">Git/GitHub</h5>
                     <div class="progress-bar">
-                      <div class="inner-bar4"><p>70%</p></div>
+                      <div class="inner-bar4"><p class="text-center text-white">70%</p></div>
                     </div>
                   </div>
                   <div class="skill-5">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">AWS</h5>
                     <div class="progress-bar">
-                      <div class="inner-bar5"><p>10%</p></div>
+                      <div class="inner-bar5"><p class="text-center text-white">10%</p></div>
                     </div>
                   </div>
                 </div>
@@ -215,6 +215,17 @@
           </section>
       </div>
     </main>
+
+    <footer class="mt-[50vh] mb-[10vh] box">
+      <h1 class="font-medium text-stroke-white text-6xl text-center">Get In <span class="text-white">Touch</span></h1>
+      <p class="text-center text-gray-400 mt-[5vh]">I am open to collaborating on your next project idea.</p>
+
+      <div class="icons-flex flex justify-center gap-8 mt-[5vh]">
+        <a href="https://github.com/Marius-Diran" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/marius-odediran-94795b235/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://x.com/Marius_Odediran" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+      </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/ad2f1382aa.js" crossorigin="anonymous"></script>
     <script defer src="portfolio.js"></script>
