--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <div class="lamp mx-auto w-[8%] max-sm:w-[22%]"><img src="assets/lamp.png" class="w-full"></div>
             <div class="light ml-[33.8vw] w-[29%] -mt-1 invisible max-sm:absolute max-sm:right-[12vw] max-sm:w-[70%]"><img src="assets/light.png" class="w-full"></div>
           </div>
-          <div class="write-up w-fit mx-auto -mt-25 text-center max-sm:mt-0 max-sm:text-center">
+          <div class="write-up w-fit mx-auto -mt-25 text-center max-sm:mt-[15vh] max-sm:text-center">
             <p class="text-lg py-2 text-[#b90025] transition duration-500 ease-in-out intro-p">Hi, I'm</p>
             <h1 class="text-6xl font-black text-stroke-white opacity-90 transition duration-500 ease-in-out intro-h1">Marius Odediran</h1>
           </div>
