--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
     <main class="mt-[35vh]">
       <div class="container">
         <div class="aboutme-page box mb-[30vh]" id="about">
-          <div class="aboutme-flex flex">
-            <div class="about-left w-[30%] ml-[15vw] mt-[15vh]">
-              <h2 class="w-6 text-6xl font-black opacity-90 text-stroke-white mb-8">About Me.</h2>
+          <div class="aboutme-flex flex max-sm:block">
+            <div class="about-left w-[30%] ml-[15vw] mt-[15vh] max-sm:w-[98%] max-sm:ml-0">
+              <h2 class="w-6 text-6xl font-black opacity-90 text-stroke-white mb-8 max-sm:w-[100%] max-sm:px-4">About Me.</h2>
               <h4 class="text-lg mb-4">Junior Frontend Engineer</h4>
               <p class="mb-[4vh]">I create eye-catching websites.</p>
 
