--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,12 @@
           <div class="aboutme-flex flex max-sm:block">
             <div class="about-left w-[30%] ml-[15vw] mt-[15vh] max-sm:w-[98%] max-sm:ml-0">
               <h2 class="w-6 text-6xl font-black opacity-90 text-stroke-white mb-8 max-sm:w-[100%] max-sm:px-4">About Me.</h2>
-              <h4 class="text-lg mb-4">Junior Frontend Engineer</h4>
-              <p class="mb-[4vh]">I create eye-catching websites.</p>
+              <h4 class="text-lg mb-4 max-sm:px-4">Junior Frontend Engineer</h4>
+              <p class="mb-[4vh] text-gray-400 max-sm:px-4">I create eye-catching websites.</p>
 
-              <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-5 overflow-hidden cursor-pointer hover:border-red-400/75">
+              <button class="relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-5 overflow-hidden cursor-pointer hover:border-red-400/75 max-sm:ml-4">
                 <i class="fa-solid fa-file mr-2.5" style="color: #ff3d3d;"></i>
-                <p class="text-sm text-red-500">View Resume</p>
+                <p class="text-sm text-rose-500">View Resume</p>
                 <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
               </button>
             </div>
