--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
               </button>
             </div>
-            <div class="about-right w-[40%] mt-[9vh] border-[1px] border-solid border-b-0 border-[rgba(255,255,255,0.1)] border-l-red-500 border-t-red-300 border-r-red-300 rounded-2xl p-8 ml-1">
+            <div class="about-right w-[40%] mt-[9vh] border-[1px] border-solid border-b-0 border-[rgba(255,255,255,0.1)] border-l-red-500 border-t-red-300 border-r-red-300 rounded-2xl p-8 ml-1 max-sm:w-[98%]">
               <p class="text-gray-400 text-base/7">Hi, <span class="text-white">I'm Marius,</span> a frontend engineer with a passion for crafting beautiful and user-friendly interfaces. My journey began in 2022 as a beginner in the world of Computer Science, where I developed an eye for detail and a drive to create aesthetically pleasing designs. As I delved deeper into the computer science space, I became fascinated with the idea of creating websites and apps on the web and mobile devices.
 
                 <br><br>
